@@ -6,6 +6,7 @@ Jump Start Changelog
 
 * Fixed bug with saving "Custom Text" logo option.
 * Fixed issues with main menu dropdowns not displaying over some items.
+* Fixed handling of private and password-protected pages with custom layouts.
 
 --------------------------------------------------------------
 
